tests/ui/cast/ptr-to-ptr-principalless.stderr
error[E0606]: casting `*mut (dyn Trait + Send + 'a)` as `*mut Wrapper<(dyn Send + 'b)>` is invalid
  --> $DIR/ptr-to-ptr-principalless.rs:63:5
   |
LL |     x as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error[E0606]: casting `*mut (dyn Trait + Send + 'a)` as `*mut Wrapper<(dyn Send + 'static)>` is invalid
  --> $DIR/ptr-to-ptr-principalless.rs:70:5
   |
LL |     x as _
   |     ^^^^^^
   |
   = note: the trait objects may have different vtables

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:8:5
   |
LL | fn unprincipled<'a, 'b>(x: *mut (dyn Send + 'a)) -> *mut (dyn Send + 'b) {
   |                 --  -- lifetime `'b` defined here
   |                 |
   |                 lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `dyn Send`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:8:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:13:5
   |
LL | fn unprincipled_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Send + 'static) {
   |                        -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `dyn Send`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:13:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn unprincipled_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Send + 'static) {
LL + fn unprincipled_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Send + 'a) {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn unprincipled_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Send + 'static) {
LL + fn unprincipled_static<'a>(x: *mut (dyn Send + 'static)) -> *mut (dyn Send + 'static) {
   |

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:18:5
   |
LL | fn unprincipled_wrap<'a, 'b>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Send + 'b> {
   |                      --  -- lifetime `'b` defined here
   |                      |
   |                      lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `Wrapper<dyn Send>`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:18:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:23:5
   |
LL | fn unprincipled_wrap_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Send + 'static> {
   |                             -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `Wrapper<dyn Send>`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:23:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn unprincipled_wrap_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Send + 'static> {
LL + fn unprincipled_wrap_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Send + 'a> {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn unprincipled_wrap_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Send + 'static> {
LL + fn unprincipled_wrap_static<'a>(x: *mut (dyn Send + 'static)) -> *mut Wrapper<dyn Send + 'static> {
   |

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:30:5
   |
LL | fn unprincipled2<'a, 'b>(x: *mut (dyn Send + 'a)) -> *mut (dyn Sync + 'b) {
   |                  --  -- lifetime `'b` defined here
   |                  |
   |                  lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `dyn Sync`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:30:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:35:5
   |
LL | fn unprincipled2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Sync + 'static) {
   |                         -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `dyn Sync`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:35:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn unprincipled2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Sync + 'static) {
LL + fn unprincipled2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Sync + 'a) {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn unprincipled2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut (dyn Sync + 'static) {
LL + fn unprincipled2_static<'a>(x: *mut (dyn Send + 'static)) -> *mut (dyn Sync + 'static) {
   |

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:40:5
   |
LL | fn unprincipled_wrap2<'a, 'b>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Sync + 'b> {
   |                       --  -- lifetime `'b` defined here
   |                       |
   |                       lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `Wrapper<dyn Sync>`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:40:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:45:5
   |
LL | fn unprincipled_wrap2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Sync + 'static> {
   |                              -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `Wrapper<dyn Sync>`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:45:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn unprincipled_wrap2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Sync + 'static> {
LL + fn unprincipled_wrap2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Sync + 'a> {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn unprincipled_wrap2_static<'a>(x: *mut (dyn Send + 'a)) -> *mut Wrapper<dyn Sync + 'static> {
LL + fn unprincipled_wrap2_static<'a>(x: *mut (dyn Send + 'static)) -> *mut Wrapper<dyn Sync + 'static> {
   |

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:53:5
   |
LL | fn unprincipled3<'a, 'b>(x: *mut (dyn Trait + Send + 'a)) -> *mut (dyn Send + 'b) {
   |                  --  -- lifetime `'b` defined here
   |                  |
   |                  lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ function was supposed to return data with lifetime `'b` but it is returning data with lifetime `'a`
   |
   = help: consider adding the following bound: `'a: 'b`
   = note: requirement occurs because of a mutable pointer to `dyn Send`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:53:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information

error: lifetime may not live long enough
  --> $DIR/ptr-to-ptr-principalless.rs:58:5
   |
LL | fn unprincipled3_static<'a>(x: *mut (dyn Trait + Send + 'a)) -> *mut (dyn Send + 'static) {
   |                         -- lifetime `'a` defined here
LL |     x as _
   |     ^^^^^^ returning this value requires that `'a` must outlive `'static`
   |
   = note: requirement occurs because of a mutable pointer to `dyn Send`
   = note: mutable pointers are invariant over their type parameter
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
note: raw pointer casts of trait objects cannot extend lifetimes
  --> $DIR/ptr-to-ptr-principalless.rs:58:5
   |
LL |     x as _
   |     ^^^^^^
   = note: this was previously accepted by the compiler but was changed recently
   = help: see <https://github.com/rust-lang/rust/issues/141402> for more information
help: consider changing the trait object's explicit `'static` bound to the lifetime of argument `x`
   |
LL - fn unprincipled3_static<'a>(x: *mut (dyn Trait + Send + 'a)) -> *mut (dyn Send + 'static) {
LL + fn unprincipled3_static<'a>(x: *mut (dyn Trait + Send + 'a)) -> *mut (dyn Send + 'a) {
   |
help: alternatively, add an explicit `'static` bound to this reference
   |
LL - fn unprincipled3_static<'a>(x: *mut (dyn Trait + Send + 'a)) -> *mut (dyn Send + 'static) {
LL + fn unprincipled3_static<'a>(x: *mut (dyn Trait + Send + 'static)) -> *mut (dyn Send + 'static) {
   |

error: aborting due to 12 previous errors

For more information about this error, try `rustc --explain E0606`.
